# C-programming-exercises

./: CMakeLists.txt  README.md
Ctutorial/: StructHack.c  bitwise-operation.c  post-pre-operator  post-pre-operator.c
IPC/: parent-child-pipe  parent-child-pipe.c
IPC/message-queue/: msg_common.h  msgq_client  msgq_client.c  msgq_server  msgq_server.c
LinkedList/: Makefile
LinkedList/inc/: list_common.h  test.h
LinkedList/src/: sll_main.c  sll_utils.c  test.c
Multi-threading/: pthread  pthread.c
Multi-threading/pthread-mutex/: pthread_cond  pthread_cond.c  pthread_mutex  pthread_mutex.c
Multi-threading/pthread-sem/: pthread-sem  pthread-sem.c
Process/: child  child.c  parent  parent-child-pipe.c  parent-with-wait.c  parent.c
bst/: Makefile
bst/inc/: bst.h
bst/src/: bst.c
command-parsing/: Makefile  README  parser
command-parsing/inc/: parser.h
command-parsing/src/: parser_main.c
gdb/: README  program-with-buffer-overflow.c  stack  stack.dis
heapsort/: ascending.c  descending.c  heapsort  maxheap  minheap
practice/bst/: .bst.c.kate-swp  bst  bst.c  queue.h  stack.h
sorting/: bubblesort  bubblesort.c  insertionsort  insertionsort.c  mergesort  mergesort.c  qsort  quicksort.c  selectionsort  selectionsort.c
thread-programing/: a.out  build_and_run.sh  result  smp-print-even-odd.c
